# frankie

./: .gitignore  .travis.yml  README.md  frankie.cabal  lio-http-server.cabal  stack.yaml
examples/: HelloFrankie.hs  HelloWorld.hs
src/: Frankie.hs
src/Frankie/: Auth.hs  Config.hs  Controller.hs  Cookie.hs  IO.hs  Log.hs  Loggers.hs  Responses.hs  Server.hs
src/LIO/HTTP/: Server.hs
src/LIO/HTTP/Server/: Controller.hs  Frankie.hs
src/LIO/HTTP/Server/Frankie/: Loggers.hs
test/: Spec.hs
