name:                frankie
version:             0.0.0.1
synopsis:            Simple HTTP server running in the LIO monad.
description:         Simple, but general HTTP server implementation that works
                     in monads other than IO, designed with security in mind.
homepage:            https://github.com/plsyssec/lio
license:             MIT
license-file:        LICENSE
author:              Deian Stefan
maintainer:          deian@cs.ucsd.edu
copyright:           2017 Deian Stefan
category:            Web, Security
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Frankie,
                       Frankie.IO,
                       Frankie.Server,
                       Frankie.Responses,
                       Frankie.Controller,
                       Frankie.Cookie,
                       Frankie.Config,
                       Frankie.Log,
                       Frankie.Auth
  build-depends:       ansi-terminal >= 0.6.2.1,
                       base          >= 4.7 && < 6,
                       bytestring    >= 0.10,
                       containers    >= 0.5.7.1,
                       http-types    >= 0.9.1,
                       text          >= 1.2.2.1,
                       wai           >= 3.2.1.1,
                       warp          >= 3.2.11.1,
                       time          >= 1.6.0.1,
                       transformers  >= 0.5.2.0,
                       mtl           >= 2.2.1,
                       base64-bytestring,
                       cookie,
                       binary
  default-language:    Haskell2010
  GHC-options: -Wall -fno-warn-orphans

test-suite frankie-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base,
                       containers,
                       HUnit,
                       test-framework,
                       test-framework-hunit,
                       text,
                       frankie
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

flag build-examples
  description: Build example executables
  default: False

executable example-hello-world
  if !flag(build-examples)
     buildable: False
  main-is:             HelloWorld.hs
  hs-source-dirs:      examples
  build-depends:       base,
                       transformers,
                       frankie
  ghc-options:         -Wall

executable example-hello-frankie
  if !flag(build-examples)
     buildable: False
  main-is:             HelloFrankie.hs
  hs-source-dirs:      examples
  build-depends:       base,
                       transformers,
                       frankie
  ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/PLSysSec/frankie.git
